@@ -39,7 +39,7 @@
       ctx.fillRect=(0,0,150,75);
     </script>
 
-    <audio controls id="audio" name="audio" class="audio">    
+    <audio controls id="audio" name="audio" class="audio">
       <source src="http://localhost:4567/04-Death_Becomes_Fur.mp4" type='audio/mp4'>
       <source src="http://localhost:4567/04-Death_Becomes_Fur.oga" type='audio/ogg; codecs=vorbis'>
       <p>Your user agent does not support the HTML5 Audio element.</p>
